   Elsasser).

 - When a SETF place is a macro, it has to be expanded with MACROEXPAND-1.

 - In FTYPE proclamations and declarations, the type may now be a user defined
   function type (Josh Elsasser).

 - COMPILE would create an extra empty file which would not get deleted after
   finishing compilation (Josh Elsasser).

 - On overflow, binding and frame stack signal a correctable error with
   STACK-OVERFLOW condition.<
	(block faa
	      (labels ((foo (x)
			 (catch 'foo (foo (1+ x))))
		       (handle-overflow (c)
			 (let ((s (ext:stack-overflow-size c)))
				   (if (< s 2304)
			       (continue)
			       (return-from faa (ext::stack-overflow-type c))))))
		(handler-bind ((ext:stack-overflow #'handle-overflow))
		  (foo 1))))

 - New function (EXT:SET-STACK-SIZE type size) can resize type =
   EXT:BINDING-STACK, EXT:LISP-STACK and EXT:FRAME-STACK.

 - FLOAT-SIGN returns the right value on negative zeros.

 - The reader and the printer now understand negative zeros.

 - Negative and nonnegative zeros are not EQL.

 - ENSURE-DIRECTORIES first has to merge the path with *DEFAULT-PATH...*

 - SUBTYPEP does not support complex CONS type specifiers. This caused the
   compiler to choke on declaration such as (CONS INTEGER (CONS T T))
   and the like.

 - The value of *DEFAULT-PATHNAME-DEFAULTS* has to be of type pathname. Other
   pathname designators are not allowed and a correctable error is signaled
   when the value of this variable is found to be of the wrong type.

 - DIRECTORY would fail to handle symbolic links under certain conditions.

 - The optional type checks generated by the compiler are based on TYPEP and
   thus they fail when the declaration type contains a function type (FUNCTION
   (...) ...)  This is now solved by replacing parts of these types with the
   simple type FUNCTION.

 - Hash tables were not properly serialized.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***