@@ -1892,9 +1892,14 @@ potential_number_p(cl_object strng, int base)
 @
 	strng = ecl_check_type_string(@'write-line', strng);
 	strm = stream_or_default_output(strm);
-	si_do_write_sequence(strng, strm, start, end);
-	ecl_write_char('\n', strm);
-	ecl_force_output(strm);
+#ifdef ECL_CLOS_STREAMS
+	if (type_of(strm) != t_stream)
+		funcall(5, @'gray::stream-write-string', strm, strng,
+			start, end);
+	else
+#endif
+		si_do_write_sequence(strng, strm, start, end);
+	ecl_terpri(strm);
 	@(return strng)
 @)
 
